--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = 'postgresql://testdb:test@127.0.0.1:5432/app'
+sqlalchemy.url = postgresql://testdb:test@127.0.0.1:5432/app'
 
 
 # Logging configuration
