--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
     command: sh run.sh
     volumes:
       - .:/code
+    environment:
+      DB_ENGINE: "postgresql"
+      DB_HOST: 127.0.0.1
+      DB_PORT: 5432
     ports:
       - "5000:5000"
   db:
