flask learning - simple webpage, index and subpages: all books, search

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ env
 *.*~
 /postgres-data/
 /learning/flask-sqlalchemy/first-try/virtual-env/
+/learning/flask-sqlalchemy/.idea/
+/test/.pytest_cache
