--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.9.9
 blinker==1.4
 click==6.7
 Flask==1.0.1
+Flask-SimpleLDAP==1.2.0
 Flask-SQLAlchemy==2.3.1
 gunicorn==19.8.1
 itsdangerous==0.24
